tests/valid/binary_operators/mult.rs
/*
return: 6
*/

main(): int {
    return 2 * 3;
}