tests/invalid/conditional_expression/malformed_ternary.rs
/*
fail: 1
*/

main(): int {
    return 1 ? 2 : 3 : 4;
}